# testCMake

./: linux command.txt
testCMake1/: Link.txt  main.cpp  my.cpp  my.h  your.cpp  your.h
testLibrary/: CMakeLists.txt  main.cpp
testLibrary/mylib/: CMakeLists.txt
testMakefile1/: Makefile  main.cpp  my.cpp
